@@ -5,10 +5,11 @@ import pl.allegro.tech.build.axion.release.domain.PredefinedVersionCreator
 import pl.allegro.tech.build.axion.release.domain.PredefinedVersionCreator.VERSION_WITH_BRANCH
 
 plugins {
-    java
     `maven-publish`
     alias(libs.plugins.axion.release)
     alias(libs.plugins.nexus.publish)
+    id("conventions.java")
+    id("conventions.buildscript-helpers")
 }
 
 scmVersion {
@@ -18,15 +19,9 @@ scmVersion {
     versionCreator = VERSION_WITH_BRANCH.versionCreator
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
 nexusPublishing {
-    connectTimeout = Duration.ofMinutes(getIntProperty("publishingTimeoutInMin", 10).toLong())
-    clientTimeout = Duration.ofMinutes(getIntProperty("publishingTimeoutInMin", 10).toLong())
+    connectTimeout = Duration.ofMinutes(intProperty("publishingTimeoutInMin", 10).toLong())
+    clientTimeout = Duration.ofMinutes(intProperty("publishingTimeoutInMin", 10).toLong())
     repositories {
         sonatype {
             nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
@@ -37,8 +32,8 @@ nexusPublishing {
         }
     }
     transitionCheckOptions {
-        maxRetries.set(getIntProperty("attemptsToCloseStagingRepository", 30))
-        delayBetween.set(Duration.ofSeconds(getIntProperty("delayInSecBetweenCloseStagingRepositoryAttempts", 45).toLong()))
+        maxRetries.set(intProperty("attemptsToCloseStagingRepository", 30))
+        delayBetween.set(Duration.ofSeconds(intProperty("delayInSecBetweenCloseStagingRepositoryAttempts", 45).toLong()))
     }
 }
 
@@ -48,21 +43,6 @@ allprojects {
 
     group = "pl.allegro.tech.hermes"
     version = rootProject.scmVersion.version
-
-    // https://chronicle.software/chronicle-support-java-17/
-    val chronicleMapJvmArgs = listOf(
-        "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
-        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED"
-    )
-    
-    extra["chronicleMapJvmArgs"] = chronicleMapJvmArgs
 
     dependencies {
         val libs = rootProject.libs
@@ -86,75 +66,6 @@ allprojects {
         testImplementation(libs.awaitility)
 
         annotationProcessor(libs.spring.boot.configuration.processor)
-    }
-
-    tasks.test {
-        useJUnitPlatform()
-        val args = mutableListOf<String>()
-        if (project.hasProperty("tests.timeout.multiplier")) {
-            args.add("-Dtests.timeout.multiplier=${project.property("tests.timeout.multiplier")}")
-        }
-        args.addAll(chronicleMapJvmArgs)
-        jvmArgs = args
-    }
-}
-
-
-configure(subprojects - project(":integration-tests")) {
-    apply(plugin = "jacoco")
-    apply(plugin = "maven-publish")
-    apply(plugin = "signing")
-
-    java {
-        withJavadocJar()
-        withSourcesJar()
-    }
-
-    tasks.javadoc {
-        (options as StandardJavadocDocletOptions).addStringOption("Xdoclint:none", "-quiet")
-    }
-
-    publishing {
-        publications {
-            create<MavenPublication>("mavenJava") {
-                artifactId = project.name
-                from(components["java"])
-                pom {
-                    name = project.name
-                    description = "Fast and reliable message broker built on top of Kafka."
-                    url = "https://github.com/allegro/hermes"
-                    inceptionYear = "2015"
-                    licenses {
-                        license {
-                            name = "The Apache Software License, Version 2.0"
-                            url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
-                        }
-                    }
-                    developers {
-                        developer {
-                            id = "skyeden"
-                            name = "Skylab Eden Team"
-                        }
-                    }
-                    scm {
-                        url = "https://github.com/allegro/hermes"
-                        connection = "scm:git@github.com:allegro/hermes.git"
-                        developerConnection = "scm:git@github.com:allegro/hermes.git"
-                    }
-                }
-            }
-        }
-    }
-
-    if (System.getenv("GPG_KEY_ID") != null) {
-        configure<SigningExtension> {
-            useInMemoryPgpKeys(
-                System.getenv("GPG_KEY_ID"),
-                System.getenv("GPG_PRIVATE_KEY"),
-                System.getenv("GPG_PRIVATE_KEY_PASSWORD")
-            )
-            sign(publishing.publications["mavenJava"])
-        }
     }
 }
 
@@ -188,10 +99,6 @@ subprojects {
             events("passed", "skipped", "failed")
         }
     }
-}
-
-fun getIntProperty(name: String, defaultValue: Int): Int {
-    return (project.findProperty(name) as? String)?.toIntOrNull() ?: defaultValue
 }
 
 dependencyAnalysis {
